<resources>
    <string name="app_name">voulenteer</string>
    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="acoount_title">Account</string>
    <string name="chat_title">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="user_name">user</string>
    <string name="last_message">last message</string>
    <string name="city">City</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="support_and_help">Support and Help</string>
    <string name="log_out">Log Out</string>
    <string name="post">post</string>
    <string name="message">Message</string>
    <string name="login_as_entity">login as entity</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>


</resources>